--- a/UnderConstructionApp/Views/Base.lproj/Main.storyboard
+++ b/UnderConstructionApp/Views/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="appIcon" translatesAutoresizingMaskIntoConstraints="NO" id="BPe-7l-bke">
-                                <rect key="frame" x="65" y="126" width="245" height="245.00000000000006"/>
+                                <rect key="frame" x="65" y="126" width="245" height="245"/>
                                 <color key="backgroundColor" red="1" green="0.86274509803921573" blue="0.10980392156862745" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="BPe-7l-bke" secondAttribute="height" multiplier="1:1" id="h3Q-jR-AMV"/>
@@ -1313,6 +1313,7 @@
                                     <action selector="buyProductActionButton:" destination="J6F-BO-fNd" eventType="touchUpInside" id="NRV-8Y-9Uo"/>
                                     <action selector="logInStartAction:" destination="DfL-bv-Kn0" eventType="touchUpInside" id="IM0-47-jZh"/>
                                     <action selector="loginActionButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hJC-JS-6Sd"/>
+                                    <action selector="sendPurchaseDataButtonAction:" destination="dYe-cu-5Yh" eventType="touchUpInside" id="Rdn-cO-xza"/>
                                 </connections>
                             </button>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="Hb1-DU-5J9">
@@ -1320,6 +1321,9 @@
                                 <date key="date" timeIntervalSinceReferenceDate="583644949.05931604">
                                     <!--2019-07-01 03:35:49 +0000-->
                                 </date>
+                                <connections>
+                                    <action selector="dataPickerChanged:" destination="dYe-cu-5Yh" eventType="valueChanged" id="ILO-Vr-HfH"/>
+                                </connections>
                             </datePicker>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nombre " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SQw-jn-jti">
                                 <rect key="frame" x="50" y="134" width="66" height="21"/>
@@ -1396,11 +1400,49 @@
                         <outlet property="shippingDatePicker" destination="Hb1-DU-5J9" id="kZx-re-bMB"/>
                         <outlet property="shippingNameTextField" destination="lwC-tV-qZl" id="S3T-lq-JSr"/>
                         <outlet property="shippingPhoneTextField" destination="UqP-xT-4kj" id="zrL-XH-kes"/>
+                        <segue destination="mVz-EH-LCl" kind="show" identifier="toFinishView" id="o97-jd-JXj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LKB-7F-LSk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="5570.3999999999996" y="1768.9655172413795"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="f6u-ko-5Pe">
+            <objects>
+                <viewController id="mVz-EH-LCl" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="4g7-Ga-IS9">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="carroHerramientas" translatesAutoresizingMaskIntoConstraints="NO" id="UB1-nw-7vc">
+                                <rect key="frame" x="60" y="124" width="255" height="255"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="UB1-nw-7vc" secondAttribute="height" multiplier="1:1" id="oHw-o9-BKG"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tu Pedido fue enviado con exito!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="feU-KE-QbH">
+                                <rect key="frame" x="39" y="419" width="297" height="60"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="UB1-nw-7vc" firstAttribute="leading" secondItem="LxC-iK-klH" secondAttribute="leading" constant="60" id="She-Lq-es9"/>
+                            <constraint firstItem="feU-KE-QbH" firstAttribute="top" secondItem="UB1-nw-7vc" secondAttribute="bottom" constant="40" id="Sm5-NL-LUV"/>
+                            <constraint firstItem="feU-KE-QbH" firstAttribute="centerX" secondItem="LxC-iK-klH" secondAttribute="centerX" id="jhM-Mp-mf7"/>
+                            <constraint firstItem="feU-KE-QbH" firstAttribute="leading" secondItem="LxC-iK-klH" secondAttribute="leading" constant="39" id="wQH-9L-FRe"/>
+                            <constraint firstItem="UB1-nw-7vc" firstAttribute="centerX" secondItem="LxC-iK-klH" secondAttribute="centerX" id="wUd-YG-2Ca"/>
+                            <constraint firstItem="UB1-nw-7vc" firstAttribute="top" secondItem="LxC-iK-klH" secondAttribute="top" constant="60" id="yQc-Jr-5Eb"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="LxC-iK-klH"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="S4H-M4-DoZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6541.6000000000004" y="1763.568215892054"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="zdT-Ye-W9h">
@@ -1529,6 +1571,7 @@
     <resources>
         <image name="appIcon" width="241" height="245.5"/>
         <image name="camara" width="25" height="25"/>
+        <image name="carroHerramientas" width="150" height="149"/>
         <image name="casa" width="25" height="25"/>
         <image name="casco" width="148.5" height="210.5"/>
         <image name="espatula" width="25" height="25"/>
